<resources>
    <string name="app_name">Android_App</string>
    <string name="title_activity_maps">Map</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="booking">Booking</string>
    <string name="support">Support</string>
    <string name="map">Map</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="city">City</string>
    <string name="address_2">Address 2</string>
    <string name="country">Country</string>
    <string name="getgeolocation">Make Booking</string>
    <string name="addres_1">Addres 1</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="srcLabel">From:</string>
    <string name="destLabel">To:</string>
    <string name="bookingButton">Book Now</string>
    <string name="inProg">Bookings in progress</string>
    <string name="completed">Completed bookings</string>
    <string name="new_ticket">Create a new support ticket below</string>
    <string name="send">Send</string>
    <string name="game">Easter Egg</string>
</resources>
