<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/map"/>
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/booking_icon"
            android:title="@string/booking" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/game"
            android:title="@string/game" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/chat_icon"
            android:title="@string/support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/log_out"/>


    </group>
</menu>

<!--
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/log_out"
            android:drawableLeft="@drawable/exit"
            android:gravity="center"
            android:textColor="@android:color/white" />

-->